--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
-PORT=''
-NODE_ENV=''
-MONGODB_URI=''
-JWT_SECRET=''
+# Server Configuration
+NODE_ENV=development
+PORT=5000
+HOSTNAME=''
+
+# MongoDB Configuration
+MONGODB_URI=mongodb://localhost:27017/ # sau thay thành url khác
+MONGODB_DATABASE=stagpower-gym
+
+# JWT Configuration
+JWT_SECRET=
+JWT_ACCESS_EXPIRES_IN=
+JWT_REFRESH_EXPIRES_IN=
