--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.6"
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.6",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
