--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
+    "jsonrepair": "^3.13.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
@@ -29,6 +31,7 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
     "openai": "^5.23.0",
+    "qrcode": "^1.5.4",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
