feature: add socket

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemailer": "^7.0.6",
     "openai": "^5.23.0",
     "qrcode": "^1.5.4",
+    "socket.io": "^4.8.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
