--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
     "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
