--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
     "openai": "^5.23.0",
+    "pdf-parse": "^1.1.1",
     "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
     "winston": "^3.17.0",
