--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,15 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      target: development
     environment:
       - HOSTNAME=0.0.0.0
       - PORT=5000
       - CHOKIDAR_USEPOLLING=true
       - MONGODB_URI=mongodb://mongo:27017
       - MONGODB_DATABASE=stagpower-gym
+      - NODE_ENV=development
+      - CHOKIDAR_USEPOLLING=true
     depends_on:
       - mongo
     ports:
@@ -25,6 +28,6 @@ services:
     volumes:
       - ./:/app
       - /app/node_modules
-
+    command: npm run dev
 volumes:
   mongo_data:
