update: dockerfile to prepare deploy

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,44 @@
 # Server Configuration
 NODE_ENV=development
 PORT=5000
-HOSTNAME=''
+HOSTNAME=localhost
+SERVER_URL=http://localhost:5000
 
 # MongoDB Configuration
-MONGODB_URI=mongodb://localhost:27017/ # sau thay thành url khác
+# Local MongoDB
+MONGODB_URI=mongodb://localhost:27017
+# MongoDB Atlas (for production)
+# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/database?retryWrites=true&w=majority
 MONGODB_DATABASE=stagpower-gym
 
 # JWT Configuration
-JWT_SECRET=
-JWT_ACCESS_EXPIRES_IN=
-JWT_REFRESH_EXPIRES_IN=
+JWT_SECRET=your-secret-key-change-this-in-production
+JWT_EXPIRES_IN=8h
+JWT_REFRESH_EXPIRES_IN=7d
+
+# ============================================
+# CORS Configuration
+# ============================================
+# For local development, leave empty to use default localhost origins
+# For production, add your frontend URLs separated by commas
+# Example: CORS_ORIGIN=https://your-frontend.onrender.com,https://your-domain.com
+CORS_ORIGIN=
+# Bao gồm cả localhost và production URLs
+CORS_ORIGIN=http://localhost:3000,http://localhost:5173,https://stagpower-gym-client.onrender.com
+
+# Email Configuration
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-password
+
+# AI Configuration (Optional)
+OPENAI_API_KEY=your-openai-api-key
+GEMINI_API_KEY=your-gemini-api-key
+
+# ============================================
+# MoMo Payment Configuration (Optional)
+# ============================================
+# Note: MoMo config has hardcoded values in src/config/momo.js
+# If you need to use environment variables, update the config file
+# MOMO_ACCESS_KEY=your-momo-access-key
+# MOMO_SECRET_KEY=your-momo-secret-key
+# MOMO_PARTNER_CODE=your-momo-partner-code
