--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "openai": "^5.23.0",
     "pdf-parse": "^1.1.1",
     "qrcode": "^1.5.4",
+    "resend": "^6.5.1",
     "socket.io": "^4.8.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
