--- a/.env.example
+++ b/.env.example
@@ -19,9 +19,6 @@ JWT_REFRESH_EXPIRES_IN=7d
 # ============================================
 # CORS Configuration
 # ============================================
-# For local development, leave empty to use default localhost origins
-# For production, add your frontend URLs separated by commas
-# Example: CORS_ORIGIN=https://your-frontend.onrender.com,https://your-domain.com
 CORS_ORIGIN=
 # Bao gồm cả localhost và production URLs
 CORS_ORIGIN=http://localhost:3000,http://localhost:5173,https://stagpower-gym-client.onrender.com
@@ -37,8 +34,6 @@ GEMINI_API_KEY=your-gemini-api-key
 # ============================================
 # MoMo Payment Configuration (Optional)
 # ============================================
-# Note: MoMo config has hardcoded values in src/config/momo.js
-# If you need to use environment variables, update the config file
-# MOMO_ACCESS_KEY=your-momo-access-key
-# MOMO_SECRET_KEY=your-momo-secret-key
-# MOMO_PARTNER_CODE=your-momo-partner-code
+
+# Resend api key to send email
+RESEND_API_KEY=
